<resources>
    <string name="app_name">EnTec</string>
    <string name="image_description"> Image Description</string>
    <!--Slides texts-->
    <string name="slide_1_title">Preserve Energy</string>
    <string name="slide_1_desc">Set a timer and control your energy consumption right on your mobile device</string>
    <string name="slide_2_title">Pay Bills</string>
    <string name="slide_2_desc">Paying bills has never been so easy and comfortable until now.</string>
    <string name="slide_3_title">Receive Notification</string>
    <string name="slide_3_desc">Our System notifies you when power comes in to enable you track daily usage</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">START</string>
    <string name="text_register">Register</string>
    <string name="hint_email">Enter Email Address</string>
    <string name="hint_name">Enter Full Name</string>
    <string name="caption">EnTech Developed By Team Energetics TechMoneyAfrica Hackathon 2019</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_setting">Settings</string>
    <string name="nav_payment">Make Payment</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_limit">Set Usage Limit</string>
    <string name="nav_tips">View Tips </string>
    <string name="nav_request">Request Meter</string>
    <string name="nav_about">About App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>

    <!-- Error Messages -->
    <string name="error_empty">One or more input fields are empty</string>
    <string name="error_invalid">Invalid user credentials</string>
    <string name="error_title">Error Occurred</string>

    <string name="request">Request</string>
    <string name="hint_description">Request Description</string>
    <string name="nav_view_request">Meter Requests</string>

    <string name="cardview_title1">Balance</string>
    <string name="cardview_description1">#32,0000</string>
    <string name="cardview_title2">Meter Request</string>
    <string name="cardview_description2">Pending</string>
    <string name="cardview_title3">Meter Number</string>
    <string name="cardview_description3">10293AWE</string>
    <string name="cardview_title4">Light Status</string>
    <string name="cardview_description4">Off</string>
    <!---->

    <string name="yes_account">Already have an account? Sign in</string>

    <string name="text_accounts">All Accounts</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>

    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="watt_spend">Watt Al</string>
    <string name="set_limit">Set Limit</string>

</resources>
