<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_request"/>
        <item
            android:id="@+id/nav_limit"
            android:icon="@drawable/limit"
            android:title="@string/nav_limit"/>
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/payment"
            android:title="@string/nav_payment"/>
        <item
            android:id="@+id/nav_view_request"
            android:icon="@drawable/view"
            android:title="@string/nav_view_request" />

        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/tips"
            android:title="@string/nav_tips"/>
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notify"
            android:title="@string/nav_notification"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/about"
            android:title="About" />

    </group>


</menu>

