<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_gravity="center">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/image_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_2_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/desc_padding"
        android:paddingRight="@dimen/desc_padding"
        android:text="@string/slide_2_desc"
        android:textAlignment="center"
        android:textColor="#1e477b"
        android:textSize="@dimen/slide_desc" />

</LinearLayout>
</RelativeLayout>