<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="#fff">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/start_date"
            android:inputType="textAutoComplete"
            android:lines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#888" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/end_date"
            android:inputType="numberSigned"
            android:lines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#888" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/track_depart_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/watt_spend"
            android:inputType="date"
            android:lines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorPrimary"
            android:focusable="false"
            android:clickable="true"
            android:editable="false"
            android:textColorHint="#888" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/Request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="#Fff"
        android:background="@drawable/rounded_button_filled"
        android:text="@string/set_limit" />


</LinearLayout>
