<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:padding="10dp"
android:background="#fff"
android:gravity="center"
xmlns:app="http://schemas.android.com/apk/res-auto"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".home.HomeActivity"
tools:showIn="@layout/app_bar_home">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".home.HomeActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:id="@+id/ll">

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_grid_1">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/card_diary"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="@color/colorPrimary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/balance"
                    android:padding="10dp"
                    android:background="@drawable/card1_background"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/cardview_title1"
                    android:textColor="#FFF"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cardview_description1"
                    android:padding="5dp"
                    android:textColor="#333"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:id="@+id/card_todo"
            card_view:cardBackgroundColor="@color/colorPrimary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/card1_background"
                    android:src="@drawable/feedback"
                    android:padding="10dp"
                    android:contentDescription="@string/image_description"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/cardview_title2"
                    android:textColor="#FFF"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cardview_description2"
                    android:padding="5dp"
                    android:textColor="#333"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>



    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_grid_2">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:id="@+id/card_settings"
            card_view:cardBackgroundColor="@color/colorPrimary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:contentDescription="@string/image_description"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/card1_background"
                    android:src="@drawable/meter"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="#FFF"
                    android:text="@string/cardview_title3"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" android:text="@string/cardview_description3"
                    android:padding="5dp"
                    android:textColor="#333"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:id="@+id/card_about"
            card_view:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/card1_background"
                    android:padding="10dp"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/cardview_title4"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/light_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/cardview_description4"
                    android:textColor="#333"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>
</ScrollView>